# coinbot

./: .gitignore  README.md  coinbot.py  generate.py  pyproject.toml  requirements.txt  strategy.md
coinbot/: __init__.py  cb.py  coinbase.py  db.py  generate.py  run.py  sample.py  simulate.py  trade.py  train.py  value_average.py  xor.py
coinbot/api/: alpaca.py  coinbase.py
coinbot/api/alpaca/: __init__.py  auth.py  broker.py  data.py  endpoint.py  request.py  rest.py  trade.py
coinbot/coinbase/: __main__.py  advanced.py  api.py  auth.py  client.py  model.py  ping.py  subscriber.py
coinbot/model/: activation.py  base.py  database.py  dense.py  error.py  tanh.py  train.py  value_average.py  xor.py
coinbot/strategy/: cost_average.py  dynamic_cost_average.py  value_average.py
docs/: LICENSE.md
docs/notebooks/: value_average.ipynb
docs/research/: enhancement.md  goal.md  model.md  references.md
docs/specs/: 00-Overview.md  01-Data-Management.md  02-Cost-Averaging.md  02-value-average.md  03-Dynamic-Cost-Averaging.md  04-Compound-Interest.md  05-Value-Average.md  06-Gain-and-Loss.md  08-Coinbase-Note-Grammar.md  09-Crypto-to-Crypto.md
models/: coinbot-xor.h5
tests/: config.sample.json  dense.py
tests/alpaca/: test_alpaca_auth.py  test_alpaca_broker.py  test_alpaca_endpoint.py  test_alpaca_request.py  test_alpaca_trader.py
tests/model/: test_dense_neural_network.py
