[tool.poetry]
name = "coinbot"
version = "0.0.4"
description = "Automated Crypto Trading with Compound Interest Strategy"
authors = ["Austin Berrio <aberrio@teleprint.me>"]
license = "AGPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
numpy = "^1.25.2"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
python-dotenv = "^1.0.0"
websocket-client = "^1.6.2"
click = "^8.1.7"
peewee = "^3.16.3"
iso8601 = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pre_commit = "^3.3.3"
pyupgrade = "^3.7.0"
pynvim = "^0.4.3"
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
build = "^0.10.0"
mkdocs = "^1.4.3"
mkdocstrings = {version = "^0.22.0", extras = ["python"]}
mkdocs-material = "^9.1.18"
ipykernel = "^6.24.0"  # VSCode requires the kernel
# jupyter = "^1.0.0"  # Only install if you need it

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
