[tool.poetry]
name = "coinbot"
version = "0.0.6"
description = "CoinBot: Automated Trading with Compound Interest"
authors = ["Austin Berrio <aberrio@teleprint.me>"]
license = "AGPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
numpy = "^2.0.0"
pandas = "^2.2.2"
matplotlib = "^3.9.1"
python-dotenv = "^1.0.1"
websocket-client = "^1.8.0"
click = "^8.1.7"
peewee = "^3.17.6"
iso8601 = "^2.1.0"
h5py = "^3.11.0"

[tool.poetry.group.dev.dependencies]
pre_commit = "^3.7.1"
pyupgrade = "^3.16.0"
pynvim = "^0.5.0"
pytest = "^8.2.2"
pytest-mock = "^3.14.0"
black = "^24.4.2"
isort = "^5.13.2"
flake8 = "^7.1.0"
build = "^1.2.1"
mkdocs = "^1.6.0"
mkdocstrings = {version = "^0.25.1", extras = ["python"]}
mkdocs-material = "^9.5.28"
ipykernel = "^6.29.5"  # VSCode requires the kernel
# jupyter = "^1.0.0"  # Only install if you need it

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
